@@ -2,7 +2,7 @@
 
 use warnings;
 use strict;
-use Test::More tests => 9;
+use Test::More tests => 14;
 use URI::file;
 
 BEGIN {
@@ -17,36 +17,63 @@ my $uri = URI::file->new_abs( "t/select.html" )->as_string;
 my $response = $mech->get( $uri );
 ok( $response->is_success, "Fetched $uri" );
 
-my (@send, @return, $form);
-push @send, "bbb";
-push @send, "ccc";
+my ($sendsingle, @sendmulti, %sendsingle, %sendmulti,
+    $rv, $return, @return, @singlereturn, $form);
+# possible values are: aaa, bbb, ccc, ddd
+$sendsingle = 'aaa';
+@sendmulti = qw(bbb ccc);
+@singlereturn = ($sendmulti[0]);
+%sendsingle = (n => 1);
+%sendmulti = (n => [2, 3]);
 
 ok($mech->form_number(1), "set form to number 1");
 $form = $mech->current_form();
 
-# multi-select list
-$mech->select("multilist",\@send);
+
+# Multi-select
+
+# pass multiple values to a multi select
+$mech->select("multilist", \@sendmulti);
 @return = $form->param("multilist");
-cmp_ok( @return, 'eq', @send, "value is " . join(' ', @send));
+is_deeply(\@return, \@sendmulti, "multi->multi value is " . join(' ', @return));
 
-# single select list
+$mech->select("multilist", \%sendmulti);
+@return = $form->param("multilist");
+is_deeply(\@return, \@sendmulti, "multi->multi value is " . join(' ', @return));
 
-# push an array of values
-# only the last should be set
-$mech->select("singlelist",\@send);
+# pass a single value to a multi select
+$mech->select("multilist", $sendsingle);
+$return = $form->param("multilist");
+is($return, $sendsingle, "single->multi value is '$return'");
+
+$mech->select("multilist", \%sendsingle);
+$return = $form->param("multilist");
+is($return, $sendsingle, "single->multi value is '$return'");
+
+
+# Single select
+
+# pass multiple values to a single select (only the _first_ should be set)
+$mech->select("singlelist", \@sendmulti);
 @return = $form->param("singlelist");
-push my @singlereturn, pop(@send);
-cmp_ok( @return, 'eq', @singlereturn, "value is " . pop(@send));
+is_deeply(\@return, \@singlereturn, "multi->single value is " . join(' ', @return));
 
-# push a single value into a single select
-my $rv = $mech->select("singlelist","aaa");
-is( $form->param("singlelist"), "aaa", "value is 'aaa'");
-
-is($rv,1,'return 1 after successful select'); 
-
-###
-
-$rv = $mech->select('missing_list',1);
-is($rv,undef,'return undef after failed select'); 
+$mech->select("singlelist", \%sendmulti);
+@return = $form->param("singlelist");
+is_deeply(\@return, \@singlereturn, "multi->single value is " . join(' ', @return));
 
 
+# pass a single value to a single select
+$rv = $mech->select("singlelist", $sendsingle);
+$return = $form->param("singlelist");
+is($return, $sendsingle, "single->single value is '$return'");
+
+$rv = $mech->select("singlelist", \%sendsingle);
+$return = $form->param("singlelist");
+is($return, $sendsingle, "single->single value is '$return'");
+
+# test return value from $mech->select
+is($rv, 1, 'return 1 after successful select');
+
+$rv = $mech->select('missing_list', 1);
+is($rv, undef, 'return undef after failed select');
